install(FILES planAhead planahead_run planahead_bitgen planahead_synth
  DESTINATION "${CMAKE_INSTALL_BINDIR}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# install(FILES planahead.desktop
#   DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}"
#   PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
