configure_file(xilinx_setup.in xilinx_setup @ONLY)

install(FILES planAhead planahead_run planahead_bitgen planahead_synth
  "${CMAKE_CURRENT_BINARY_DIR}/xilinx_setup"
  DESTINATION "${CMAKE_INSTALL_BINDIR}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES setup-fix-install setup-env
  DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}/xilinx"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# install(FILES planahead.desktop
#   DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}"
#   PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
