configure_file(xilinx.in xilinx @ONLY)

install(FILES "${CMAKE_CURRENT_BINARY_DIR}/xilinx"
  DESTINATION "${CMAKE_INSTALL_BINDIR}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES xilinx-fix-install xilinx-env xilinx-run
  DESTINATION "${CMAKE_INSTALL_LIBEXECDIR}/xilinx"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES planAhead planahead_run planahead_bitgen planahead_synth
  DESTINATION "${CMAKE_INSTALL_BINDIR}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

# install(FILES planahead.desktop
#   DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}"
#   PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
